MDEV-9627 clang builds fail on i386

don't use C11 atomics unless HAVE_GCC_C11_ATOMICS is defined